src/components/zen-popover/zen-popover.scss
@import '../scss/component-helpers.scss';
@import './animations.scss';

:host {
  display: block;
  position: absolute;
  z-index: 100;
  width: max-content;
}

.popup-wrap,
.popup,
.scrollable-content {
  height: inherit;
  max-height: inherit;
  min-height: inherit;
  width: inherit;
  max-width: inherit;
  min-width: inherit;
}

:host(:not([interactive])) .popup-wrap {
  pointer-events: none;
}

.popup {
  background-color: $color-white;
  box-shadow: $shadow-small;
  border-radius: 2px;
}

.scrollable-content {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
}

.arrow,
.arrow::before {
  position: absolute;
  width: 8px;
  height: 8px;
  background: inherit;
}

.arrow {
  visibility: hidden;
}

.arrow::before {
  visibility: visible;
  content: '';
  transform: rotate(45deg);
  border: 2px solid rgba(#000, 0.05);
  background-clip: padding-box;
}

[data-popper-placement^='top'] .arrow {
  bottom: -5px;

  &::before {
    border-top: none;
    border-left: none;
  }
}

[data-popper-placement^='bottom'] .arrow {
  top: -5px;

  &::before {
    border-bottom: none;
    border-right: none;
  }
}

[data-popper-placement^='left'] .arrow {
  right: -5px;

  &::before {
    border-left: none;
    border-bottom: none;
  }
}

[data-popper-placement^='right'] .arrow {
  left: -5px;

  &::before {
    border-right: none;
    border-top: none;
  }
}

